added new endpoints and added to swagger
